--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,3 +1,3 @@
 config:
-  info： "master branch, springcloud-config/config-prod.yml version=1"
+  info: "master branch, springcloud-config/config-prod.yml version=1"
 
